style : 전반적인 코드 수정
의미없는 변수 삭제, 코드 간소화